<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ur_eef_control</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="jsisaac@todo.todo">jsisaac</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>std_msgs</depend>
  <depend>joint_state_broadcaster</depend>
  <depend>joint_trajectory_controller</depend>
  <depend>rviz2</depend>
  <depend>robot_state_publisher</depend>
  <depend>xacro</depend>
  <depend>urdf</depend>
  <depend>rclcpp</depend>

  <build_depend>libnlopt-cxx-dev</build_depend>
  <build_depend>orocos_kdl</build_depend>
  <build_depend>trac_ik_lib</build_depend>

  <exec_depend>libnlopt0</exec_depend>
  <exec_depend>libnlopt-cxx-dev</exec_depend>
  <exec_depend>orocos_kdl</exec_depend>
  <exec_depend>trac_ik_lib</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

